[gd_scene load_steps=2 format=3 uid="uid://dtdpl1a0mgley"]

[ext_resource type="Script" uid="uid://w4ixskixhy25" path="res://login_screen.gd" id="1_frse4"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_frse4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 402.0
offset_bottom = 182.0

[node name="CodeEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Student Code"

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="LoginRequest" type="HTTPRequest" parent="."]
